# ChangeLog for dev-python/pygobject
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.37 2008/03/22 03:49:36 dang Exp $

  22 Mar 2008; Daniel Gryniewicz <dang@gentoo.org> pygobject-2.14.1.ebuild:
  Marked stable on amd64 for bug #212986

  17 Mar 2008; Jeroen Roovers <jer@gentoo.org> pygobject-2.14.1.ebuild:
  Stable for HPPA (bug #212986).

  16 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  pygobject-2.14.1.ebuild:
  stable x86, bug 212986

  15 Mar 2008; nixnut <nixnut@gentoo.org> pygobject-2.14.1.ebuild:
  Stable on ppc wrt bug 212986

  14 Mar 2008; Raúl Porcel <armin76@gentoo.org> pygobject-2.14.1.ebuild:
  alpha/ia64/sparc stable wrt #212986

  12 Mar 2008; Brent Baude <ranger@gentoo.org> pygobject-2.14.1.ebuild:
  Marking pygobject-2.14.1 ppc64 for bug 212986

*pygobject-2.14.1 (03 Jan 2008)

  03 Jan 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +pygobject-2.14.1.ebuild:
  bump to 2.14.1

*pygobject-2.14.0-r1 (27 Dec 2007)

  27 Dec 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +files/pygobject-2.14.0-libffi-magic.patch, +pygobject-2.14.0-r1.ebuild:
  remove automagic dependency on libffi, bug #198875

  27 Nov 2007; Jeroen Roovers <jer@gentoo.org> pygobject-2.14.0.ebuild:
  Stable for HPPA (bug #199322).

  20 Nov 2007; Markus Rothe <corsair@gentoo.org> pygobject-2.14.0.ebuild:
  Stable on ppc64; bug #199322

  17 Nov 2007; Raúl Porcel <armin76@gentoo.org> pygobject-2.14.0.ebuild:
  alpha/ia64/sparc stable wrt #199322

  17 Nov 2007; nixnut <nixnut@gentoo.org> pygobject-2.14.0.ebuild:
  Stable on ppc wrt bug 199322

  17 Nov 2007; Dawid Węgliński <cla@gentoo.org> pygobject-2.14.0.ebuild:
  Stable on x86 (bug #199322)

  16 Nov 2007; Samuli Suominen <drac@gentoo.org> pygobject-2.14.0.ebuild:
  amd64 stable wrt #199322

*pygobject-2.14.0 (26 Sep 2007)

  26 Sep 2007; Mart Raudsepp <leio@gentoo.org> +pygobject-2.14.0.ebuild: